--- a/views/menu.xml
+++ b/views/menu.xml
@@ -14,6 +14,9 @@
             name="Data Contact" 
             parent="stylerent_menu_root" 
             sequence="30"/> 
-
+        <menuitem id="stylerent_pembelian_menu_categ"
+            name="Pembelian"
+            parent="stylerent_menu_root"
+            sequence="40"/>
     </data>
 </odoo>
